<resources>
    <string name="app_name">Fig PDF Reader &amp; AI Tools</string>
    <string name="landing_title">Fig PDF Reader &amp; AI Tools</string>
    <string name="card_heading">Experience <font color='#EB7A9A'>AI</font> Brilliance \nin Every Summary.</string>
    <string name="card_description">Your Smart PDF Summarizer \nfor Instant Clarity</string>
    <string name="card_button">Summarize with AI</string>
    <string name="features">Premium Features</string>
    <string name="interview_text">Your Personal Interview Mentor</string>
    <string name="interview_bot_heading">Interview Bot</string>
    <string name="interview_bot_description">Enhance your interview readiness with AI-powered tips and mock questions</string>
    <string name="interview_badge">✨&#160;Let’s Practice!</string>
    <string name="recommendation_text">Personalized Recommendations</string>
    <string name="recommendation_badge">💡&#160;Try Me!</string>
    <string name="last_used_day">2 days ago</string>
    <string name="import_button">Import</string>
    <string name="import_button_count">Import (%1$d)</string>
    <string name="left">Left</string>
    <string name="done">Done</string>
    <string name="right">Right</string>
    <string name="adjust">Adjust</string>
    <string name="crop">Crop</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="details">Details</string>
    <string name="ok">OK</string>
    <string name="pdf_heading">PDF</string>
    <string name="select">Select</string>
    <string name="rename">Rename</string>
    <string name="str_cancel">Cancel</string>
    <string name="add_images">Add Images</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="set_password">Set password</string>
    <string name="sort_by">Sort By</string>
    <string name="set_a_password_to_protect_the_pdf">Set a password to Protect the PDF</string>
    <string name="enter_password">Enter Password</string>
    <string name="name">Name</string>
    <string name="created_date">Created Date</string>
    <string name="modified_date">Modified Date</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="password">Password</string>
    <string name="white_margin">White Margin</string>
    <string name="compression_settings">Compression Settings</string>
    <string name="pdf_page_size">PDF Page Size</string>
    <string name="orientation">Orientation</string>
    <string name="auto">Auto</string>
    <string name="preview">Preview</string>
    <string name="convert">Convert</string>
    <string name="compression_setting">Compression Setting</string>
    <string name="max_compression">Max Compression</string>
    <string name="low_compression">Low Compression</string>
    <string name="small_size_low_quality">Small size, low quality</string>
    <string name="medium_compression">Medium Compression</string>
    <string name="medium_size_medium_quality">Medium size, medium quality</string>
    <string name="regular_compression">Regular Compression</string>
    <string name="large_size_high_quality">Large size, high quality</string>
    <string name="max_size_original_quality">Max size, original quality</string>
    <string name="auto_fit">Auto fit</string>
    <string name="letter">Letter</string>
    <string name="legal">Legal</string>
    <string name="executive">Executive</string>
    <string name="business_card">Business Card</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="long_press_to_reorder">Long Press to Reorder</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="reset_button">Reset</string>
    <string name="done_button">Done</string>
    <string name="crop_button">Crop</string>
    <string name="doodle_button">Doodle</string>
    <string name="filter_button">Filter</string>
    <string name="text_button">Text</string>
    <string name="original_crop">Original</string>
    <string name="free_crop">Free</string>
    <string name="one_one_crop">1:1</string>
    <string name="three_four_crop">3:4</string>
    <string name="three_two_crop">3:2</string>
    <string name="sixteen_nine_crop">16:9</string>
    <string name="interview">Interview</string>
    <string name="bot">Bot</string>
    <string name="choose_any_one_option">Choose any one Option</string>
    <string name="select_your_role_and_begin_the_interview_journey">Select Your Role and Begin the Interview Journey.</string>
    <string name="hiring">👔 Hiring</string>
    <string name="candidates">🧑‍💼 Candidates</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="choose_file">Choose File</string>
    <string name="extensions">Extensions</string>
    <string name="question_difficulty">Question Difficulty</string>
    <string name="position_level">Position Level</string>
    <string name="medium">Medium</string>
    <string name="range_of_questions">Range of Questions</string>
    <string name="please_wait">Please Wait</string>
    <string name="interview_bot">Interview Bot</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
    <string name="type_you_answer_here">Type you answer here…</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="skip">Skip</string>
    <string name="view_result">View Result</string>
    <string name="congratulations_your_interview_successfully">Congratulations Your Interview Question is Successfully Submit check your interview Score</string>
    <string name="submit_successfully">Submit Successfully</string>
    <string name="interview_questions_answers_evaluation">Interview Questions, Answers \n&amp; Evaluation</string>
    <string name="almost_there_your_document">Almost there! Your document is being transformed quickly and securely.</string>
    <string name="submit">Submit</string>
    <string name="answer1">Answer:</string>
    <string name="evaluation">Evaluation</string>
    <string name="no_text_found">No Text Found</string>
    <string name="we_could_not_extract_text_from_the_uploaded_pdf_please_upload_a_valid_resume">We could not extract text from the uploaded PDF. Please upload a valid resume</string>
    <string name="coming_soon">🎉Coming Soon</string>
    <string name="history">History</string>
    <string name="image_selection">Image Selection</string>
    <string name="save_all_images">Save All Images</string>
    <string name="convert_successfully">Convert Successfully</string>
    <string name="more_feature">More Feature</string>
    <string name="summarize_with_ai">Summarize \nwith AI</string>
    <string name="ai_resume_analyzer">AI Resume \nAnalyzer</string>
    <string name="pdf_converter_pro_tools">PDF Converter Pro \nTools</string>
    <string name="ocr_text_heading">OCR Made Easy</string>
    <string name="ocr_title">OCR With PDF</string>
    <string name="ocr_text_description">From scanned to smart — OCR made simple.</string>
    <string name="ocr_badge">🔥&#160;Popular</string>
    <string name="pdf_converter_heading">PDF Converter Pro Tools</string>
    <string name="pdf_converter_description">Smart PDF Converter for Fast &amp; Easy Conversion</string>
    <string name="resume_analyzer">AI Resume Analyzer</string>
    <string name="resume_description">Optimize your CV with smart insights</string>
    <string name="ppt_heading">AI PowerPoint Presentation Maker</string>
    <string name="ppt_description">Auto-generate stunning presentations</string>
    <string name="help_us_know_you">Help us know you</string>
    <string name="your_preferred_language_is">Your Preferred\nlanguage is?</string>
    <string name="next">Next</string>
    <string name="update_app_button">Update App</string>
    <string name="coming_soon_text">Coming Soon…</string>
    <string name="please_wait_while_we_process">Please wait while we process your request…</string>
    <string name="no_word_found">No Word Found</string>
    <string name="we_could_not_find">We Couldn’t find any text, please write some text in input field</string>
    <string name="try_again">Try Again</string>
    <string name="pdf">PDF</string>
    <string name="summarizer">Summarizer</string>
    <string name="tap_to_upload_your_file">Tap to upload your file</string>
    <string name="just_upload_your_file">Just upload your file and let AI create a concise summary for you.</string>
    <string name="view_file">View File</string>
    <string name="pdf_summarizer">PDF Summarizer</string>
    <string name="view_doc">View Doc</string>
    <string name="ask_any_thing_here">ask any thing here…</string>
    <string name="select_your_role_and_begin">Select Your Role and Begin the\nYour Journey.</string>
    <string name="view_document">View Document</string>
    <string name="settings">Settings</string>
    <string name="ai">AI</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="rate_us">Rate Us</string>
    <string name="suggestion_text">Suggest Feature</string>
    <string name="fig_universe">Fig Universe</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy &amp; Policy</string>
    <string name="fig_by_kukami_technology">Fig by Kukami Technology</string>
    <string name="visit_kukami_technology">Visit Kukami Technology</string>
    <string name="this_app_contains_ads">This app contains ads</string>
    <string name="splash_screen_heading">Fig PDF Reader &amp; AI Tools</string>
    <string name="splash_screen_subheading">Fig by Kukami Technology</string>
    <string name="converter_tools">Converter Tools</string>
    <string name="are_you_sure_you_want_to_exit">Are You Sure You Want To Exit?</string>
    <string name="you_ll_miss_out_on_the_fun_if_you_leave_now">You’ll miss out on the fun if you\nleave now.</string>
    <string name="exit">Exit</string>
    <string name="explore_pro_tool">Want to Explore PDF Converter Pro Tools?</string>
    <string name="pdf_tools">PDF Tools</string>
    <string name="add_pdf">Add PDF</string>
    <string name="no_file_selected">No file selected</string>
    <string name="change_language">Choose Language</string>
    <string name="data_not_available">Data Not Available</string>
    <string name="pdf_converter">PDF Converter</string>
    <string name="ai_ppt_maker">AI PPT Maker</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_connection_des">Please check your connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="fig_maintenance_heading">Fig Under \n <font color="#BF496A"> Maintenance </font>!!!</string>
    <string name="maintenance_text">Sorry for the inconvenience, but we\'re currently undergoing scheduled maintenance to improve our services and provide you with a better experience. We\'ll be back online shortly.</string>
    <string name="maintenance_thank_you_text">Thank You For Your Patience!!!</string>
    <string name="got_it">Got It</string>
    <string name="interview_bot_result">Interview Bot Result</string>
    <string name="images_from_pdf">Images From PDF</string>
    <string name="upload_your_resume"><![CDATA[Upload your resume\nPDF & DOCX only. Max 10MB file size.]]></string>
    <string name="upload_your_resume_1">Upload your resume</string>
    <string name="privacy_guaranteed">Privacy Guaranteed</string>
    <string name="presentation_generation">Presentation Generation</string>
    <string name="generate_outline">Generate Outline</string>
    <string name="please_enter_your_slides_topic">Please enter your slides topic</string>
    <string name="number_of_slides">Number Of Slides</string>
</resources>