<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_screen"
    android:orientation="vertical"
    tools:context=".activity.PDFSummarizerActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backKey"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:adjustViewBounds="true"
        android:src="@drawable/back_img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_minus14sdp"
        android:fontFamily="@font/montserrat_bold"
        android:includeFontPadding="false"
        android:text="@string/ai"
        android:textColor="@color/black"
        android:textSize="@dimen/_26ssp" />

    <com.app.figpdfconvertor.figpdf.customwidget.GradientTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/federant_regular"
        android:gravity="center"
        android:text="@string/presentation_generation"
        android:textSize="@dimen/_20ssp"
        app:endColor="#BF496A"
        app:startColor="#F975CD" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_stroke"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:hint="@string/please_enter_your_slides_topic"
        android:paddingHorizontal="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:includeFontPadding="false"
        android:text="@string/number_of_slides"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:valueFrom="0"
        android:valueTo="10"
        android:stepSize="1"
        app:tickVisible="false"
        app:haloColor="@color/default_stroke_color"
        app:haloRadius="@dimen/_18sdp"
        app:thumbHeight="@dimen/_18sdp"
        app:thumbRadius="@dimen/_8sdp"
        app:thumbColor="@color/dark_pink_color"
        app:thumbWidth="@dimen/_18sdp"
        app:trackColorActive="@color/dark_pink_color"
        app:trackColorInactive="@color/default_stroke_color"
        app:trackHeight="@dimen/_8sdp" />
    <TextView
        android:id="@+id/txtSummarizer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:background="@drawable/bg_btn_theme"
        android:fontFamily="@font/roboto_semi_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/generate_outline"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />



</LinearLayout>