<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:backgroundTint="@color/white"
    android:padding="@dimen/_20sdp">


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_semi_bold"
        android:text="@string/set_password"
        android:textSize="@dimen/_15ssp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/set_a_password_to_protect_the_pdf"
        android:alpha="0.5"
        android:textSize="@dimen/_13ssp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/bg_pw_edittext"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_15sdp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRename"
            android:layout_width="match_parent"
            android:layout_toStartOf="@id/imgRemove"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textSize="@dimen/_13sdp"
            />

        <ImageView
            android:id="@+id/imgRemove"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_pw_eye"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <RelativeLayout
            android:id="@+id/okButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_fill_gradient"
            android:padding="@dimen/_9sdp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_semi_bold"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>