<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_14sdp"
    android:background="@drawable/round_corner_shape"
    android:backgroundTint="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_14sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgNoInternet"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_no_internet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/roboto_semi_bold"
        android:gravity="center"
        android:text="@string/no_internet_connection"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_4sdp"
        android:alpha="0.5"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/no_internet_connection_des"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/btnRetry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_btn_theme"
        android:fontFamily="@font/roboto_semi_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

</LinearLayout>