<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    tools:context=".activity.UnderMaintenanceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/fig_maintenance_heading"
            android:textSize="@dimen/_20ssp" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:adjustViewBounds="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animation_under_construction"
            app:lottie_repeatMode="restart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/roboto_regular"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:text="@string/maintenance_text"
            android:textAlignment="center"
            android:textColor="#80000000"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/maintenance_thank_you_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/got_it_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/bg_btn_theme"
            android:fontFamily="@font/roboto_semi_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/got_it"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>

</ScrollView>